# kvitter

./: .gitignore  ARCHITECTURE.md  INSTALL.md  LICENSE  README.md  build.sh  install.sh  run.sh
backend/: .env.example  Cargo.toml  test.sh
backend/migrations/: 20250710193449_create_users_table.sql  20250719004103_project_tables.sql
backend/src/: main.rs
backend/src/auth/: hash.rs  jwt.rs
backend/src/models/: response.rs  user.rs
backend/src/routes/: auth.rs  user.rs
backend/src/tests/: user_routes.rs
backend/src/util/: error.rs  mod.rs  result.rs  user_service.rs  validation.rs
frontend/: package-lock.json  package.json
