[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = ["v4"] }
tower-http = "0.6.6"